[package]
name = "rss-dao"
version = "0.1.0"
authors = ["Andrea Chiumenti <achiumenti@red.software.systems>"]
edition = "2018"

#![feature(try_from)]
[dependencies]
r2d2 = "0.8.2"
r2d2_postgres = "0.14.0"
postgres = {version = "0.15.2", features = ["with-uuid", "with-rustc-serialize", "with-time", "with-serde_json"]}
serde = "1.0.79"
serde_json = "1.0.32"
serde_derive = "1.0.79"
uuid = "0.5"
futures = "0.1.24"

