[package]
name = "rss-web"
version = "0.1.0"
authors = ["Andrea Chiumenti <achiumenti@red.software.systems>"]
edition = "2018"

[dependencies]
actix = "0.7.9"
actix-web = "0.7.18" 
juniper = "0.11.1"
serde = "1.0.88"
serde_derive = "1.0.88"
serde_json = "1.0.38"
env_logger = "0.6.0"
futures = "0.1.25"
rss-dao = {path = '../rss-dao'}