[package]
name = "rss-web"
version = "0.1.0"
authors = ["Andrea Chiumenti <achiumenti@red.software.systems>"]
edition = "2018"

[dependencies]
actix = "0.7.9"
actix-web = "0.7.18" 
juniper = "0.11.1"
serde = "1.0.88"
serde_derive = "1.0.88"
serde_json = "1.0.38"
env_logger = "0.6.0"
futures = "0.1.25"

r2d2 = "0.8.3"
r2d2_postgres = "0.14.0"
postgres = {version = "0.15.2", features = ["with-uuid", "with-rustc-serialize", "with-time", "with-serde_json"]}

rss-dao = {path = '../rss-dao'}